feat: update project metadata and branding - Update HTML meta tags with professional title and description - Rebrand from 'table-scan-menu-magic' to 'QR Menu Builder' - Add comprehensive README with project features - Update package.json with proper name and description - Configure vercel.json with professional project settings - Improve social media preview for link sharing

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "qr-menu-builder",
+  "description": "Professional QR Menu Builder for Cafes and Restaurants",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "keywords": ["qr-menu", "restaurant", "cafe", "digital-menu", "menu-builder"],
+  "author": "Digital Menu Solutions",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
