🔗 Optimize menu URL length with short IDs
✨ Features:
- Add short_id columns to locations and tables for URL optimization
- Reduce URL length from ~80 to ~20 characters (75% reduction)
- Support both short IDs and UUID fallback for backward compatibility

🛠️ Technical Changes:
- Update database schema with short_id fields and indexes
- Modify table creation to use Supabase auto-generated UUIDs
- Add dual lookup logic (short_id first, UUID fallback) in usePublicMenu
- Update TypeScript types to support optional short_id fields
- Fix UUID generation issues in table creation

📁 Database:
- Add migration for short_id columns with unique constraints
- Create SQL script for updating existing records
- Add performance indexes for fast short_id lookups

🔧 URL Structure:
- Before: /menu/{uuid-36-chars}/{uuid-36-chars}
- After: /menu/{8-chars}/{6-chars}
- Maintains backward compatibility with existing QR codes

This optimization significantly improves QR code readability and reduces scanning errors while maintaining full backward compatibility.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "keywords": ["qr-menu", "restaurant", "cafe", "digital-menu", "menu-builder"],
+  "keywords": [
+    "qr-menu",
+    "restaurant",
+    "cafe",
+    "digital-menu",
+    "menu-builder"
+  ],
   "author": "Digital Menu Solutions",
   "scripts": {
     "dev": "vite",
@@ -52,10 +58,14 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.462.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -73,7 +83,9 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^22.5.5",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
