🍽️ Rebrand to Food List with comprehensive SEO optimization
✨ Features:
- Rebrand from QR Menu Builder to Food List
- Complete English localization for better international reach
- Comprehensive SEO optimization with 50+ relevant keywords

🔍 SEO Improvements:
- Updated all meta tags to English with Food List branding
- Added extensive keywords: food list, restaurant menu, cafe menu, qr code, contactless dining
- Enhanced Open Graph and Twitter Card meta tags
- Added Schema.org JSON-LD structured data for better search visibility
- Created comprehensive sitemap.xml with all major pages
- Updated robots.txt with proper crawl instructions and sitemap reference

📱 Mobile & Social Optimization:
- Added Apple mobile web app meta tags
- Enhanced social media sharing with proper og:locale
- Added Twitter site handle and improved descriptions

🌐 Technical SEO:
- Added X-Robots-Tag headers for proper indexing
- Enhanced Vercel configuration with SEO headers
- Updated package.json with Food List branding and expanded keywords
- Added proper favicon and Apple touch icon references

This rebrand positions the application as 'Food List - Professional QR Menu Builder'
with significantly improved search engine discoverability for restaurant and cafe
management solutions.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "qr-menu-builder",
-  "description": "Professional QR Menu Builder for Cafes and Restaurants",
+  "name": "food-list",
+  "description": "Food List - Professional QR Menu Builder for Restaurants and Cafes. Create digital menus, manage food lists, and provide contactless dining experience.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "keywords": [
+    "food-list",
     "qr-menu",
     "restaurant",
     "cafe",
     "digital-menu",
-    "menu-builder"
+    "menu-builder",
+    "food-ordering",
+    "contactless-menu",
+    "restaurant-management",
+    "cafe-management",
+    "qr-code",
+    "mobile-menu",
+    "restaurant-pos",
+    "food-service",
+    "hospitality",
+    "menu-system"
   ],
-  "author": "Digital Menu Solutions",
+  "author": "Food List - Digital Menu Solutions",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
